Fri Sep 27 10:27 2013 CDT
    * lib/channel.js: Change the link regex, change the way 'affects links'
      works.  The default link filter will only transform a link of no
      previous filters transform it (and filters will only transform a link
      if 'affects links' is ticked).

Thu Sep 26 23:40 2013 CDT
    * lib/config.js: Add config keys for statistics interval & max age,
      alias purge interval & max age.
    * lib/bgtask.js: Update intervals to reflect new config keys

Thu Sep 26 23:33 2013 CDT
    * lib/stats.js: Remove this file, move the statistics tracking
      interval to the new bgtask.js
    * lib/bgtask.js: Generalize background tasks to this module.  Add
      tasks for statistics tracking and clearing old aliases.
    * lib/database.js: Modify the way aliases work a bit.  Rather than
      constantly deleting to keep 5 aliases per person, have a function
      that is periodically called to delete aliases more than one month old,
      and have the listAliases function explicitly sort and request the most
      recent 5 aliases.
    * lib/server.js: Update references accordingly

Thu Sep 26 23:08 2013 CDT
    * lib/acp.js, lib/api.js, lib/server.js, lib/stats.js, www/acp.html,
      www/assets/js/acp.js: Remove the [realtime] 'connection stats'
      tracking that was pretty worthless anyways.

Thu Sep 26 21:42 2013 CDT
    * www/assets/js/player.js: Keep track of the duration of the current
      video and use this information to prevent the player restarting when
      it receives an out of range timestamp

Thu Sep 26 13:29 2013 CDT
    * lib/user.js: Some code style cleanup

Thu Sep 26 13:17 2013 CDT
    * lib/user.js: A few minor cleanups to login functions
    * lib/api.js: Pass the login failure reason to the action log

Tue Sep 24 15:18 2013 CDT
    * www/assets/js/callbacks.js: Double fix search result buttons because
      the paginator was being duplicated

Tue Sep 24 13:45 2013 CDT