@@ -91,6 +91,18 @@ module.exports = function (Server) {
 
                 try {
                     data = JSON.parse(data);
+                    if (data.entry.yt$accessControl) {
+                        var ac = data.entry.yt$accessControl;
+                        for (var i = 0; i < ac.length; i++) {
+                            if (ac[i].action === "embed") {
+                                if (ac[i].permission === "denied") {
+                                    callback("Embedding disabled", null);
+                                    return;
+                                }
+                                break;
+                            }
+                        }
+                    }
                     var seconds = data.entry.media$group.yt$duration.seconds;
                     var title = data.entry.title.$t;
                     var media = new Media(id, title, seconds, "yt");
