@@ -1,3 +1,7 @@
+Sun Sep 29 21:30 2013 CDT
+    * lib/get-info.js: Add an extra check to ytv2 to make sure embedding is
+      allowed.  If not, send a queueFail.
+
 Fri Sep 27 10:27 2013 CDT
     * lib/channel.js: Change the link regex, change the way 'affects links'
       works.  The default link filter will only transform a link of no
